# rfp2deck_v1.0

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh
.data/reports/: traceability.json
.data/uploads/: tpl_standard_proposal_template_v1.pptx
app/: rfp2deck_app.py  streamlit_app.py
rfp2deck/: __init__.py
rfp2deck/agent/: graph.py  nodes.py  prompts.py  state.py
rfp2deck/core/: config.py  logging.py  schemas.py
rfp2deck/diagrams/: generator.py
rfp2deck/ingestion/: deck_analyzer.py  docx_parser.py  pdf_parser.py  pptx_parser.py
rfp2deck/llm/: openai_client.py  structured.py
rfp2deck/qa/: coverage.py  overflow.py
rfp2deck/rag/: embeddings.py  indexer.py  retriever.py  sharepoint_client.py  sharepoint_index.py
rfp2deck/rendering/: pptx_renderer.py  template_binder.py
